EmployeeDashboard/employeeDashContent.css
.dash-intro {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 2rem 2rem 0.6rem 2rem;
    font-family: 'avenir next';
    font-size: 22px;
}

/*======Dashboard Top=====*/
.emp-dash-top {
    display: grid;
    grid-template-columns: 2fr 1fr;
    gap: 15px;
}

/*For each item on the top row*/
.emp-item-container {
    padding: 20px;
    color: black;
    background-color: #F5F5F5;
    border-radius: 24px;
    margin-top: 1rem;
    height: auto;
}

.emp-item-container.empdash-stats-container {
    background-color: #d6c7bb;
}

.emp-item-top {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 0 0.6rem 0.6rem 0.6rem;
    font-weight: 500;
    font-size: 1.2rem;
}

.emp-item-top a {
    padding: 0.6rem 0.8rem;
    font-size: 0.8rem;
    color: white;
    border-radius: 30px;
    white-space: nowrap;
    font-weight: 400;
}

/*User Stats Section*/
.emp-grid-stat-content {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 10px;
    place-items: center center;
    grid-auto-flow: row;
    margin-top: 1.2rem;
}

.emp-stat {
    background-color: white;
    color: black;
    font-size: 2rem;
    text-align: center;
    font-weight: bold;
    border-radius: 10.5px;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    width: 100%;
    padding: 0.6rem;
    border: 2px solid transparent;
    height: 6.5rem;
}

.emp-stat-circle {
    width: 12px;
    height: 12px;
    border-radius: 50%;
    align-self: flex-start;
}

.emp-stat-txt {
    color: black;
    font-size: 1.2rem;
    font-weight: normal;
    white-space: nowrap;
    font-weight: 500;
}

.emp-stat-nums {
    font-size: 1.1rem;
    font-weight: normal;

}

.emp-stat-line {
    height: 0.2rem;
    border-radius: 10px;
    width: 95%;
    margin: 0 auto;
    margin-top: 0.3rem;
}

/*Personal To Do List Snippet*/
.emp-kanban-bottom {
    margin-top: 1.2rem;
}

.emp-task {
    display: flex;
    justify-content: center;
    flex-direction: column;
    width: 95%;
    margin: 0 auto;

}

.emp-task-top {
    display:flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 0.3rem;
}

.emp-task-line {
    height: 0.1rem;
    background-color: #8E8E91;
    width: 100%;
    margin: 0 auto;
    margin-bottom: 0.8rem;
}

.emp-task-priority {
    padding: 0.1rem 0.2rem;
    border-radius: 6px;
    color: white;
    text-align: center;
    width: 20%;
    white-space: nowrap;
    font-size: 15px;
}

.emp-high-priority {
    background-color: #E6757E;
}

.emp-medium-priority {
    background-color:  #EAB385;
}

.emp-low-priority {
    background-color: #ADDA9D;
}


/*===Table Styling===*/



.emp-projectKanban-bottom {
    overflow-x: auto;
    max-width: 100%;
    max-height: 38vh;
}

.emp-projectKanban-bottom table {
    border-collapse: collapse;
    background-color: white;
    text-align: left;
    border-radius: 20px;
    width: 100%;

}

.emp-projectKanban-bottom table  thead {
    border-bottom: 1px solid black;
}

.emp-projectKanban-bottom table  th {
    padding: 1rem 2rem;
    letter-spacing: 0.1rem;
    font-size: 0.9rem;
    font-weight: 600;

}

.emp-projectKanban-bottom table td {
    padding: 0.6rem 1.2rem;
    font-size: 0.9rem;

}

.emp-projectKanban-bottom table tr:not(thead tr) {
    border-bottom: 2px solid #F5F5F5;
}



.emp-table-status, .emp-table-priority {
    border-radius: 5px;
    padding: 0.1rem 0.3rem;
    text-align: center;
}

.emp-table-status.emp-table-status-to-do, .emp-table-priority.emp-table-priority-high {
    background-color: #ffcdd2;
    color: #c62828;
}

.emp-table-status.emp-table-status-in-progress, .emp-table-priority.emp-table-priority-medium  {
    background-color:  #fff0c2;
    color: #947c01;
}

.emp-table-status.emp-table-status-completed, .emp-table-priority.emp-table-priority-low  {
    background-color: #c8e6c9;
    color: #388e3c;
}

#emp-dash-content .task-search {
    background-color: white;
    width: 100%;
}

#emp-dash-content .search-task-error-msg{
    font-weight: normal;
    white-space: nowrap;
    font-size: 15px;
}


@media (max-width: 1500px) {
    .emp-dash-top {
        grid-template-columns: 1fr;
    }

    
}

@media (max-width: 920px) {
    .emp-grid-stat-content  {
        grid-template-columns: 1fr 1fr;
    }
}

